--- a/webbions/contactform/composer.json
+++ b/webbions/contactform/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "contactform",
+    "name": "webbions/contactform",
     "description": "A contact form package for laravel",
     "authors": [{
         "name": "akash webbions",
@@ -8,7 +8,7 @@
     "require": {},
     "autoload": {
         "psr-4": {
-            "Contactform\\": "src/"
+            "Webbions\\Contactform\\": "src/"
         }
     }
 }
